clusters/home/apps/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  labels:
    app: homepage 
  namespace: homepage 
spec:
  ports:
  - port: 80
    name: http
    targetPort: 3000 
  selector:
    app: homepage
