clusters/home/apps/homepage/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage 
  namespace: homepage 
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.local.bomal.cloud`)
      kind: Rule
      services:
        - name: homepage 
          port: 80
  tls:
    secretName: local-bomal-cloud-tls
